Bugfix on value types for TPCMapper and TPCReducer