@@ -1,12 +1,13 @@
-package timeProfiltCorrelation;
+package timeProfitCorrelation;
 
+import org.apache.hadoop.io.FloatWritable;
 import org.apache.hadoop.io.LongWritable;
 import org.apache.hadoop.io.Text;
 import org.apache.hadoop.mapreduce.Mapper;
 
 import java.io.IOException;
 
-public class TPCMapper extends Mapper<LongWritable, Text, Text, Float>{
+public class TPCMapper extends Mapper<LongWritable, Text, Text, FloatWritable>{
 
     public void map(LongWritable key, Text value, Context context) throws IOException, InterruptedException {
         if(key.get() == 0) {
@@ -16,6 +17,6 @@ public class TPCMapper extends Mapper<LongWritable, Text, Text, Float>{
         String outKey = row.split(",")[3].split(" ")[0];
         String totalAmount = row.split(",")[10];
 
-        context.write(new Text(outKey), new Float(totalAmount));
+        context.write(new Text(outKey), new FloatWritable(Float.valueOf(totalAmount)));
     }
 }
